test/link/section-union/org-conflict.out
error: Section "conflicting address" is defined with address $beef at section-union/org-conflict.asm(7), but with address $babe at section-union/org-conflict.asm(7)
---
error: <stdin>(16):
    Section already declared as fixed at different address $beef
FATAL: <stdin>(16):
    Cannot create section "conflicting address" (1 error)
